# watchman

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  winget.yml
bus-app/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
bus-app/public/: manifest.webmanifest  sw.js
bus-app/scripts/: console-shot.mjs  console-tour.mjs  stage-engine.mjs
bus-app/src/: App.css  App.tsx  Dash.test.tsx  Dash.tsx  DocPopup.tsx  ErrorBoundary.tsx  JsonView.tsx  PushBell.tsx  Settings.test.tsx  Settings.tsx  UpdatePill.test.tsx  UpdatePill.tsx  VaultZone.test.tsx  VaultZone.tsx  api.ts  main.tsx  nav.tsx  published.ts  push.test.tsx  push.ts  theme.test.ts  theme.ts  transport.test.ts  transport.ts  types.ts  update.ts
bus-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.release.conf.json
bus-app/src-tauri/capabilities/: default.json
bus-app/src-tauri/icons/: icon.icns
bus-app/src-tauri/installer-assets/: README.md
bus-app/src-tauri/src/: backend.rs  bus.rs  commands.rs  config.rs  dash.rs  lib.rs  main.rs  poller.rs  remote.rs  tray.rs  viz.rs  watcher.rs
bus-app/src/test/: mockTauri.ts  setup.ts
bus-app/src/viz/: BarChart.tsx  BeadTree.test.tsx  BeadTree.tsx  Donut.tsx  FoodBank.tsx  Ladder.test.tsx  Ladder.tsx  LineChart.test.tsx  LineChart.tsx  Matrix.tsx  Radar.tsx  Sankey.tsx  Scatter.tsx  Schedule.tsx  Treemap.tsx  VestTimeline.tsx  VizZone.tsx  common.ts
docs/: BEADS.md  BUS.md  CLI.md  DOCKER.md  EXAMPLES.md  UPDATER.md  WEB-CONSOLE.md  feeds.public.yaml
docs/assets/: access-topology.flow.json  architecture.flow.json
samples/: README.md
samples/packs/college-grad/: pack.yaml
samples/packs/college-grad/.beads/: issues.jsonl
samples/packs/college-grad/career/: applications.yaml  watchlist.yml
samples/packs/college-grad/dashboards/: compare.json  finance.json  travel.json
samples/packs/college-grad/finance/: networth-history.json  portfolio.yaml  quotes.json
samples/packs/college-grad/travel/: weights.yaml
samples/packs/demo-growth/: pack.yaml
samples/packs/demo-growth/.beads/: issues.jsonl
samples/packs/demo-growth/career/: applications.yaml  watchlist.yml
samples/packs/demo-growth/dashboards/: backlog.json  career.json  compare.json  finance.json  news.json
samples/packs/demo-growth/finance/: networth-history.json  portfolio.yaml  quotes.json
samples/packs/demo-growth/travel/: weights.yaml
samples/packs/demo-investor/: pack.yaml
samples/packs/demo-investor/.beads/: issues.jsonl
samples/packs/demo-investor/career/: applications.yaml  watchlist.yml
samples/packs/demo-investor/config/: harness.yaml
samples/packs/demo-investor/dashboards/: compare.json  finance.json  tickets.json
samples/packs/demo-investor/finance/: networth-history.json  portfolio.yaml  quotes.json
samples/packs/demo-investor/travel/: weights.yaml
samples/packs/early-retiree/: pack.yaml
samples/packs/early-retiree/.beads/: issues.jsonl
samples/packs/early-retiree/career/: applications.yaml  watchlist.yml
scripts/: ci_import_walk.py  gen_demo_quotes.py
skills/: README.md
skills/console-operator/: SKILL.md
skills/corpus-operator/: SKILL.md
src/harness/: __init__.py  _http.py  cli.py  corpus.py  errors.py  mcp_server.py  overlay_cli.py  packs.py  scaffold.py  settings.py  viz.py
src/harness/beads/: __init__.py  board.py  cli.py  tickets.py
src/harness/bus/: __init__.py  cli.py  mcp_server.py  models.py  push.py  server.py  service.py  store.py  watchmen.py
src/harness/career/: __init__.py  applications.py  cli.py  config.py  mcp_server.py  models.py  service.py  watchlist.py
src/harness/config/: harness.yaml
src/harness/console/: __init__.py  api.py
src/harness/finance/: __init__.py  cik_resolver.py  cli.py  compare.py  correlate.py  events.py  fed.py  levels.py  market.py  mcp_server.py  models.py  multiples.py  nport.py  research.py  service.py  unwind.py  watch.py
src/harness/travel/: __init__.py  cli.py  conditions.py  flights.py  lodging.py  mcp_server.py  media.py  models.py  service.py  viz.py
templates/corpus/: README.md  user_background.md
templates/corpus/finance/: README.md
templates/corpus/narratives/: README.md
templates/corpus/reports/: README.md
templates/corpus/role-hunt/: README.md  applications.yaml  watchlist.yml
templates/corpus/travel/: README.md
tests/: test_beads_board.py  test_beads_cli.py  test_beads_tickets.py  test_bus_server.py  test_console_api.py  test_map_annotate.py  test_overlay.py  test_sample_packs.py  test_scaffold.py  test_settings_envfiles.py  test_shared_core.py  test_version_sync.py  test_weights_pack.py  test_windows_encoding.py
viz/: README.md  package-lock.json  package.json  render.js
viz/samples/: timeline.json
(+168 files in other folders)
