[package]
name = "bus-app"
version = "0.9.0"
description = "Watchman — tray inbox + notifications for the harness message bus (docs/BUS.md)"
authors = ["thwomp-io"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
# In-app self-update (release builds only — registration is #[cfg(not(debug_assertions))]-gated in
# lib.rs, mirroring the autostart pattern). updater = check/download/install against the published
# releases' latest.json; process = the post-install relaunch. Both ride the same unpinned "2" train
# as every other tauri-plugin above (no exact pin — nothing here depends on a patch-level behavior).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"  # vault fs-watcher (VAULT live-refresh); FSEvents on macOS
# bus_url remote mode (docs/BUS.md "Serving the bus over HTTP"): a small SYNC http client —
# the poller thread + invoke commands are synchronous, so no async runtime is warranted.
# Default features kept (rustls) so a future https bus URL works without a dep change.
ureq = { version = "2", features = ["json"] }
gethostname = "1.1"  # per-device transport marker ("desktop:{hostname}") in remote mode

